--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,4 +3,12 @@ server {
  listen [::]:80;
 
  server_name ${DDT_DOMAINS};
+
+
+ location {
+    proxy_redirect off;
+    proxy_pass http://sonarqube:9000;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+  }
 }
