default nginx conf update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,9 @@ services:
     depends_on:
       - sonarqube
     image: nginx
+    entrypoint:
+      - sh
+      - ./nginx/nginx.sh
     networks:
       - sonarnet
     ports:
