--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,7 @@ server {
  server_name ${DDT_DOMAINS};
 
 
- location {
+ location /{
     proxy_redirect off;
     proxy_pass http://sonarqube:9000;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
