--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     image: nginx
     entrypoint:
       - sh
-      - ./nginx/nginx.sh
+      - /etc/nginx/nginx.sh
     networks:
       - sonarnet
     ports:
@@ -51,6 +51,7 @@ services:
       - .env
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.sh:/etc/nginx/nginx.sh
       - ./vol/letsencrypt:/etc/letsencrypt
       # - /etc/madridcentral/sonarqube.crt:/etc/ssl/certs/sonarqube.crt
       # - /etc/madridcentral/sonarqube.key:/etc/ssl/private/sonarqube.key
