remove unused code

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,8 @@
-# Archivo de entorno .env
+# SonarQube JDBC credentials
+SONAR_JDBC_USERNAME=sonar
+SONAR_JDBC_PASSWORD=sonar
+SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
 
-# Configuracion general
-# usar entorno "production" en producción
-DDT_ENV=production
-
-
-# Configuracion del servidor HTTP
-# Los dominios deben ir separados por un espacio
-DDT_DOMAINS=localhost
-
-# Configuracion para renovacion automatica de certificados SSL
-DDT_SSL_NAME=sirlucast
-DDT_SSL_MAIL=jlmax.torres@gmail.com
+# SonarQube DB credentials
+POSTGRES_USER=sonar
+POSTGRES_PASSWORD=sonar
