--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,8 @@ services:
       - "9000:9000"
     networks:
       - sonarnet
-    environment:
-      SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
-      SONAR_JDBC_USERNAME: sonar
-      SONAR_JDBC_PASSWORD: sonar
+    env_file:
+      - .env
     volumes:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
@@ -24,9 +22,8 @@ services:
     image: postgres:alpine
     networks:
       - sonarnet
-    environment:
-      POSTGRES_USER: sonar
-      POSTGRES_PASSWORD: sonar
+    env_file:
+      - .env
     volumes:
       - postgresql:/var/lib/postgresql
       # This needs explicit mapping due to https://github.com/docker-library/postgres/blob/4e48e3228a30763913ece952c611e5e9b95c8759/Dockerfile.template#L52
@@ -38,23 +35,16 @@ services:
     depends_on:
       - sonarqube
     image: nginx
-    entrypoint:
-      - sh
-      - /etc/nginx/nginx.sh
     networks:
       - sonarnet
     ports:
       - 80:80
       - 443:443
     restart: unless-stopped
-    env_file:
-      - .env
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/nginx.sh:/etc/nginx/nginx.sh
-      - ./vol/letsencrypt:/etc/letsencrypt
-      # - /etc/madridcentral/sonarqube.crt:/etc/ssl/certs/sonarqube.crt
-      # - /etc/madridcentral/sonarqube.key:/etc/ssl/private/sonarqube.key
+      # - /certs/fullkey.pem:/etc/ssl/certs/sonarqube.crt:ro
+      # - /certs/privkey.key:/etc/ssl/private/sonarqube.key:ro
 
 networks:
   sonarnet:
