--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -2,7 +2,7 @@ server {
  listen 80;
  listen [::]:80;
 
- server_name ${DDT_DOMAINS};
+ server_name localhost;
 
  return 301 https://$server_name$request_uri;
 }
@@ -11,16 +11,11 @@ server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
 
-  server_name ${DDT_DOMAINS};
-  ssl_certificate             /etc/letsencrypt/live/${DDT_SSL_NAME}/fullchain.pem;
-  ssl_certificate_key         /etc/letsencrypt/live/${DDT_SSL_NAME}/privkey.pem;
-  ssl_dhparam                 /etc/letsencrypt/ssl-dhparams.pem;
+  server_name localhost;
+  ssl_certificate             /etc/ssl/certs/sonarqube.pem;
+  ssl_certificate_key         /etc/ssl/private/sonarqube.pem;
   ssl_buffer_size             8k;
-  include                     /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_protocols               TLSv1.2 TLSv1.3;
-
-  # ssl_certificate /etc/ssl/certs/sonarqube.crt;
-  # ssl_certificate_key /etc/ssl/private/sonarqube.key;
 
   access_log /var/log/nginx/sonarqube.access.log;
 
