--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,15 @@ services:
       - db
     networks:
       - sonarnet
+      - nginx-proxy
     env_file:
       - .env
+    expose:
+      - "9000"
+    environment:
+      - VIRTUAL_HOST=sonarqube.ulagos.cl
+      - VIRTUAL_PORT=9000
+      - VIRTUAL_PROTO=https
     volumes:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
@@ -28,25 +35,12 @@ services:
       - postgresql_data:/var/lib/postgresql/data
     restart: unless-stopped
 
-  reverse_proxy:
-    container_name: reverse_proxy
-    depends_on:
-      - sonarqube
-    image: nginx
-    networks:
-      - sonarnet
-    ports:
-      - 80:80
-      - 443:443
-    restart: unless-stopped
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      # - /certs/fullkey.pem:/etc/ssl/certs/sonarqube.crt:ro
-      # - /certs/privkey.key:/etc/ssl/private/sonarqube.key:ro
-
 networks:
   sonarnet:
     driver: bridge
+  default:
+    external:
+      name: nginx-proxy
 
 volumes:
   sonarqube_data:
